# opinion-forge

./: CHANGELOG.md  README-full.md  README.md  pyproject.toml  pytest.ini
docs/: MODES.md  PRD.md  index.html  terms.html
opinionforge/: __init__.py  cli.py  config.py
opinionforge/core/: generator.py  preview.py
opinionforge/desktop/: __init__.py  browser.py  tray.py
opinionforge/models/: __init__.py  config.py
opinionforge/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_compatible.py  openai_provider.py  registry.py
opinionforge/storage/: __init__.py  database.py  encryption.py  exports.py  pieces.py  settings.py
opinionforge/web/: __init__.py  app.py  sse.py
opinionforge/web/static/: onboarding.js  style.css
tests/: test_cli_provider_flags.py  test_desktop_browser.py  test_desktop_tray.py  test_e2e.py  test_e2e_v2.py  test_encryption.py  test_engine_integration.py  test_history_routes.py  test_history_templates.py  test_home_improvements.py  test_main_entry.py  test_onboarding_routes.py  test_onboarding_templates.py  test_pipeline_integration.py  test_provider_coverage.py  test_providers_anthropic.py  test_providers_base.py  test_providers_ollama.py  test_providers_openai.py  test_providers_openai_compatible.py  test_providers_registry.py  test_settings_routes.py  test_settings_templates.py  test_storage_database.py  test_storage_exports.py  test_storage_integration.py  test_storage_pieces.py  test_storage_settings.py  test_web_e2e.py  test_web_htmx.py  test_web_integration.py  test_web_routes.py
(+19 files in other folders)
